<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:orientation="vertical"
        android:screenOrientation="portrait"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <ImageButton
                android:id="@+id/button_menu"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:width="50dp"
                android:height="50dp"
                android:background="@color/white"
                android:contentDescription="@string/button_menu"
                android:src="@drawable/ic_menu" />

            <!-- Logo -->
            <ImageView
                android:background="@drawable/im_logo_blocksat_portable"
                android:contentDescription="@string/logo_portable"
                android:layout_width="300dp"
                android:layout_height="120dp"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/info_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                style="@style/AppInfo"
                android:text="@string/version"/>
            <TextView
                android:id="@+id/info_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorMedium"
                android:text="@string/contact"/>

            <ImageView
                android:background="@drawable/im_logo_sener_text"
                android:contentDescription="@string/logo_sener"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginTop="250dp"
                android:layout_gravity="center_horizontal" />


        </LinearLayout>


    </LinearLayout>


    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"/>

</android.support.v4.widget.DrawerLayout>